src/objects/BFM_Shipment__c.object
<CustomObject>
    <description>A Shipment represents one delivery transaction a Carrier company performs for an Unilever Company.</description>
    <fields>
        <fullName>ANTT__c</fullName>
        <label>ANTT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Code__c</fullName>
        <label>Action Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Account_Vendor_Code__c</fullName>
        <description>Vendor Code information regarding Carrier Account</description>
        <formula>Carrier_Account__r.Vendor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier Account	Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <description>The Carrier delivering this Shipment.</description>
        <label>Carrier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Carrier Account)</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <label>Display</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Shipment_Update__c</fullName>
        <label>Last Shipment Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Origin_Plant_Code__c</fullName>
        <label>Origin Plant Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Calculation_Date__c</fullName>
        <label>Pricing Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Number__c</fullName>
        <externalId>true</externalId>
        <label>Shipment Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Start__c</fullName>
        <label>Shipment Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <label>Shipment Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Type__c</fullName>
        <label>Shipment Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Process__c</fullName>
        <label>Shipping Process</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_type__c</fullName>
        <label>Shipping type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilever_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unilever Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Unilever Company)</relationshipLabel>
        <relationshipName>Shipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Plate__c</fullName>
        <label>Vehicle Plate</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6th_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>6th flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X6th_flag_updated_date__c</fullName>
        <description>This field indicates the date/time when the field 6th flag has been updated.</description>
        <label>6th flag Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shipment_Number__c</columns>
        <columns>Shipment_Start__c</columns>
        <columns>Shipment_Type__c</columns>
        <columns>Carrier_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>Shipment View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DT-{000000}</displayFormat>
        <label>Shipment Internal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>